fix per: https://github.com/Pluu/pluu.github.io/commit/d66a9ef6586e7cd207172e683721cd958ed10150

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Bytabit
 description: "The Bytabit Mobile project."
 analytics: #Google analytics code in the format XX-nnnnnnnn-n
-baseurl: "/bytabit.github.io" #important: start with /
+baseurl: "" #important: start with /
 url: "http://bytabit.org"
 
 # Build settings
